Updated desktop version with nav, heading, and buttons. Fixed some spacing and text size issues.

--- a/less/global.less
+++ b/less/global.less
@@ -12,26 +12,28 @@ html, body {
 
 h1, h2, h3, h4, h5 {
   font-family: 'Indie Flower', cursive;
+  padding:10px 0 10px;
 }
 
 h1 {
   font-size: 4rem;
+  
 }
 
 h2 {
   font-size: 3.2rem;
-  padding-bottom: 10px;
+  
 }
 
 h4 {
-  font-size: 2.5rem;
-  padding-bottom: 10px;
+  font-size: 2rem;
+  
 }
 
 p {
   line-height: 1.5;
-  font-size: 1.6rem;
-  padding-bottom: 10px;
+  font-size: 1.3rem;
+  
 }
 
 img {
@@ -43,4 +45,18 @@ img {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+  font-size:1.5rem;
+}
+
+a:visited {
+  color:grey;
+}
+
+a:hover {
+  background-color: grey;
 }
