--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,16 @@
 // Mixins in here
+
+.signupBtn() {
+    width:80%;
+    margin:0 auto;
+    margin-top:2%;
+    text-align:center;
+    padding:5% 15% 5%;
+    background-color: @button-bg;
+    border-radius: 15px;
+    
+    a {
+        color:@white;
+        font-size: 1.5rem;
+    }
+}
