--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,22 @@
 // Navigation Styles here
+
+header {
+        border-bottom: 2px dashed @silver;
+    }
+    
+.navBar {
+    width:800px;
+    margin:0 auto;
+    margin-top:1%;
+    margin-bottom:1%;
+    display:flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+
+    nav {
+        width:50%;
+        display:flex;
+        justify-content: space-around;
+    }
+}
